--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,3 @@
-<!-- ============================================================== -->
-<!-- Main wrapper - style you can find in pages.scss -->
-<!-- ============================================================== -->
-<div id="main-wrapper">
+<router-outlet></router-outlet>
 
-    <!--  <h1>Base de Datos Estudiantes</h1>    -->
-
-    <div class="page-wrapper">  <!-- -------------- LO PUEDO BORRAR MAS ADELANTE PARA Q ALINIE BIEN EL TEXTO    -->
-        <div class="container-fluid">
-            <h1>Base de Datos Estudiantes</h1>
-
-            <!--    Breadcrumbs -->
-            <app-breadcrumbs></app-breadcrumbs>
-
-            <!--    Mi sistema de Rutas -->
-            <!-- ============================================================== -->
-            <!-- Start Page Content -->
-            <!-- ============================================================== -->
-            <div class="row">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body">
-                            <!-- This is some text within a card block. -->
-                            <router-outlet></router-outlet>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- ============================================================== -->
-            <!-- End PAge Content -->
-            <!-- ============================================================== -->
-
-        </div>
-
-        <!-- ============================================================== -->
-        <!-- footer -->
-        <!-- ============================================================== -->
-        <footer class="footer">
-            <!-- © 2017 Admin Pro by wrappixel.com -->
-            © 2023 Estudiantes DB by R
-        </footer>
-        <!-- ============================================================== -->
-        <!-- End footer -->
-        <!-- ============================================================== -->
-
-    </div>
-
-</div>
+<mat-slide-toggle>Toogleame!</mat-slide-toggle>
