--- a/src/app/pages/nopagefound/nopagefound.component.html
+++ b/src/app/pages/nopagefound/nopagefound.component.html
@@ -1,1 +1,16 @@
-<p>nopagefound works!</p>
+<!-- ============================================================== -->
+<!-- Main wrapper - style you can find in pages.scss -->
+<!-- ============================================================== -->
+<section id="wrapper" class="error-page">
+    <div class="error-box">
+        <div class="error-body text-center">
+            <h1>404</h1>
+            <h2 class="text-uppercase">Page Not Found !</h2>
+            <p class="text-muted m-t-30 m-b-30">Prueba Intentando Regresar al HOME</p>
+            <a href="index.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Regresar al home</a> </div>
+        <footer class="footer text-center">© {{ year }} EstudiantesR DB.</footer>
+    </div>
+</section>
+<!-- ============================================================== -->
+<!-- End Wrapper -->
+<!-- ============================================================== -->
